--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: pybal
 Section: unknown
 Priority: optional
 Maintainer: Mark Bergsma <mark@wikimedia.org>
-Build-Depends: debhelper (>= 5), wget
+Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
 
 Package: pybal
