Change homepage to wikitech
setup.py was pointing to svn, which is now stale; instead of switching
to the git repo, use the wikitech homepage, which serves as a nice
description of the project. While at it, add it into the Debian package
as well.

--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Mark Bergsma <mark@wikimedia.org>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
+Homepage: http://wikitech.wikimedia.org/view/Pybal
 
 Package: pybal
 Architecture: all
