Move main.py to scripts/pybal
We don't actually use distutils' scripts functionality, since that would
put pybal into /usr/bin instead of /usr/sbin, but it's still nice to be
consistent and to also avoid renaming the file on installation.

--- a/debian/rules
+++ b/debian/rules
@@ -59,7 +59,7 @@ install: build
 
 	# Add here commands to install the package into debian/pybal.
 	python setup.py install --prefix=debian/pybal/usr --install-layout=deb
-	install -m 0755 main.py $(PREFIX)/usr/sbin/pybal
+	install -m 0755 scripts/pybal $(PREFIX)/usr/sbin/pybal
 	install -d -m 0755 $(PREFIX)/etc/pybal
 
 	# Example configs
