Modernize Debian packaging
Use debhelper 8 (from 5), replace debian/rules with a simple dh stub,
use debian/install for installing files, use ${python:Depends} and bump
Standard-Version to 3.9.3.

--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
 Source: pybal
-Section: unknown
+Section: net
 Priority: optional
 Maintainer: Mark Bergsma <mark@wikimedia.org>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
+Build-Depends: debhelper (>= 8)
+Standards-Version: 3.9.3
 Homepage: http://wikitech.wikimedia.org/view/Pybal
 
 Package: pybal
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ipvsadm, python (>= 2.5), python-twisted
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-twisted, ipvsadm
 Description: Wikimedia LVS monitor
  PyBal is an LVS load balancer monitor. It checks the status of
  backend servers through various methods (monitors) and alters
