Make example configuration less Wikipedia-specific
Use RFC 2606 domain names (example.com), RFC 5737 IPv4 address blocks
and RFC 5398 AS numbers for documentation.

--- a/debian/pybal.conf
+++ b/debian/pybal.conf
@@ -1,19 +1,19 @@
 #[global]
 #bgp = no
-#bgp-local-asn =  64600
-#bgp-peer-address = 192.168.1.2
-#bgp-as-path = 64600 64601
+#bgp-local-asn =  65551
+#bgp-peer-address = 192.0.2.254
+#bgp-as-path = 65551 65552
 
 #[text]
 #protocol = tcp
-#ip = 208.80.152.2
+#ip = 192.0.2.11
 #port = 80
 #scheduler = wlc
-#config = file:///etc/pybal/text-squids
+#config = file:///etc/pybal/text-servers
 #depool-threshold = .5
 #bgp = no
 #monitors = [ 'ProxyFetch', 'IdleConnection', 'RunCommand' ]
-#proxyfetch.url = [ 'http://en.wikipedia.org/wiki/Main_Page' ]
+#proxyfetch.url = [ 'http://www.example.com/' ]
 #idleconnection.timeout-clean-reconnect = 3
 #idleconnection.max-delay = 300
 #runcommand.command = /bin/sh
@@ -24,13 +24,13 @@
 
 #[images]
 #protocol = tcp
-#ip = 208.80.152.3
+#ip = 192.0.2.21
 #port = 80
 #scheduler = wlc
-#config = file:///etc/pybal/upload-squids
+#config = file:///etc/pybal/images-servers
 #depool-threshold = .5
 #bgp = no
 #monitors = [ 'ProxyFetch', 'IdleConnection' ]
-#proxyfetch.url = [ 'http://upload.wikimedia.org/pybaltestfile.txt' ]
+#proxyfetch.url = [ 'http://images.example.com/' ]
 #depool-threshold = .5
 #bgp = no
