Add a debian/changelog entry
The package has been refactored but there's not much point in listing
all the changes there, so just summarize it into a line or two.

Now that we're in git, use 0.N+rYYYYMMDD-M notation for version numbers;
I'd like to drop the "r", but that would make it smaller than the
previous version :-)

--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: pybal
 Section: net
 Priority: optional
 Maintainer: Mark Bergsma <mark@wikimedia.org>
+Uploaders: Faidon Liambotis <faidon@wikimedia.org>
 Build-Depends: debhelper (>= 8)
 Standards-Version: 3.9.3
 Homepage: http://wikitech.wikimedia.org/view/Pybal
