Add b-d on python-all and use dh_python2
We need python-all to pick the right python versions and dh needs
--with python2 to use dh_python2 instead of python-support.

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Mark Bergsma <mark@wikimedia.org>
 Uploaders: Faidon Liambotis <faidon@wikimedia.org>
-Build-Depends: debhelper (>= 8)
+Build-Depends: debhelper (>= 8), python-all
 Standards-Version: 3.9.3
 Homepage: http://wikitech.wikimedia.org/view/Pybal
 
