Add bgp-nexthop-ipv[46] examples in pybal.conf

--- a/debian/pybal.conf
+++ b/debian/pybal.conf
@@ -3,6 +3,8 @@
 #bgp-local-asn =  64496
 #bgp-peer-address = 192.0.2.254
 #bgp-as-path = 64496 64511
+#bgp-nexthop-ipv4 = 192.0.2.100
+#bgp-nexthop-ipv6 = 2001:DB8:1:1::100
 
 #[text]
 #protocol = tcp
