Configuration variables are enforced to be lower case

--- a/debian/pybal.conf
+++ b/debian/pybal.conf
@@ -45,4 +45,4 @@
 #config = file:///etc/pybal/dns
 #monitors = [ 'DNSQuery', 'IdleConnection' ]
 #dnsquery.hostnames = [ 'www.example.com', 'nxdomain.example.com' ]
-#dnsquery.fail-on-NXDOMAIN = no
+#dnsquery.fail-on-nxdomain = no
