--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,13 @@ envlist = py27, flake8
 commands = {envpython} setup.py test
 deps = twisted
 
+[testenv:cover]
+commands = coverage run setup.py test
+           coverage report --omit=".tox*,tests/*,setup.py"
+           coverage html --omit=".tox*,tests/*,setup.py"
+deps = twisted
+       coverage
+
 [testenv:flake8]
 commands = flake8
 deps = flake8
