--- a/tox.ini
+++ b/tox.ini
@@ -3,17 +3,20 @@ envlist = py27, flake8
 
 [testenv]
 commands = trial pybal
-deps = twisted
+deps =
+  twisted
 
 [testenv:cover]
 commands =
   coverage run --source pybal --branch {envdir}/bin/trial pybal
   coverage report --omit=pybal/test --show-missing
-deps = twisted coverage
+deps =
+  twisted
+  coverage
 
 [testenv:flake8]
 commands = flake8
 deps = flake8
 
 [flake8]
-exclude = .tox,pybal,pybal.egg-info
+exclude = build,.tox,pybal,pybal.egg-info
