--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
 python: 2.7
-install: pip install tox
-script: tox
+install:
+    - pip install tox
+    - pip install coveralls
+script: coverage run --source=pybal --source=pybal.monitors --omit=test setup.py test
+after_success: coveralls
