--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python: 2.7
 install:
     - pip install tox
     - pip install coveralls
-script: coverage run --source=pybal --omit=test setup.py test
+script: coverage run --source=pybal setup.py test
 after_success: coveralls
