pybal (1.08) jessie-wikimedia; urgency=low
 * Lint fixes for I695ce535 and I526d5737
 * Add unit tests for HttpConfigurationObserver
 * Add unit tests for FileConfigurationObserver
 * Initial commit of ConfigurationObserver unit tests
 * Migrate get_subclasses to pybal.util; add unit tests
 * Lint: make ConfigDict methods lowerCamelCase
 * Add HttpConfigurationObserver
 * Make FileConfigurationObserver easier to extend
 * Make util.py PEP8-compliant
 * Drop inotify; improve documentation and handling of configuration formats
 * Add missing import
 * Introduce ConfigurationObserver class
 * Add '__version__' and 'USER_AGENT_STRING'
 * Use INotify to watch for configuration file changes
 * Make util.getboolean handle booleans gracefully
 * Fix travis and coverall configuration
 * Don't omit 'test'
 * Fix .travis.yml test invocation command
 * Report code coverage to coveralls

Change-Id: I8ec943fb7fa9f676a0ff59ccb155651e75810922

--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,17 @@
 Source: pybal
 Section: net
 Priority: optional
+X-Python-Version: >= 2.7, << 2.8
 Maintainer: Mark Bergsma <mark@wikimedia.org>
 Uploaders: Faidon Liambotis <faidon@wikimedia.org>
-Build-Depends: debhelper (>= 8), python-all
+Build-Depends: debhelper (>= 8), python-all, dh-python
 Standards-Version: 3.9.3
 Homepage: http://wikitech.wikimedia.org/view/Pybal
 
 Package: pybal
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-twisted, ipvsadm
+Depends: ${misc:Depends}, ${python:Depends}, python-twisted,
+  python-mock, ipvsadm
 Description: Wikimedia LVS monitor
  PyBal is an LVS load balancer monitor. It checks the status of
  backend servers through various methods (monitors) and alters
