New package, minor debian tweaks
* New release 1.12
* Add myself to the uploaders
* Updated standards version
* Re-added the sysvinit script, per debian policy, making it work with
  our current package.

Change-Id: Ie3afbda05966c8f7d0648194c095459a0c5dcf38

--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,9 @@ Section: net
 Priority: optional
 X-Python-Version: >= 2.7, << 2.8
 Maintainer: Mark Bergsma <mark@wikimedia.org>
-Uploaders: Faidon Liambotis <faidon@wikimedia.org>
+Uploaders: Faidon Liambotis <faidon@wikimedia.org>, Giuseppe Lavagetto <glavagetto@wikimedia.org>
 Build-Depends: debhelper (>= 8), python-all, dh-python
-Standards-Version: 3.9.3
+Standards-Version: 3.9.6
 Homepage: http://wikitech.wikimedia.org/view/Pybal
 
 Package: pybal
